<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/changeMapsType"
        android:title="@string/change_map_style"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_map_24">
        <!-- "file" submenu -->
        <menu>
            <item android:id="@+id/ms_default"
                android:title="@string/default_map" />
            <item android:id="@+id/ms_terrain"
                android:title="@string/terrain_map" />
            <item android:id="@+id/ms_satellite"
                android:title="@string/satellite_map" />
            <item android:id="@+id/ms_hybrid"
                android:title="@string/hybrid_map" />
        </menu>
    </item>
</menu>