<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    map:layout_constraintTop_toTopOf="parent"
    map:layout_constraintStart_toStartOf="parent"
    android:scaleType="fitXY"
    android:src="@drawable/overlay"
    android:contentDescription="@string/overlay" />

<androidx.fragment.app.FragmentContainerView
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    map:layout_constraintHeight_percent="0.65"
    tools:context=".maps.MapsActivity"
    map:layout_constraintTop_toTopOf="parent"
    map:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        map:layout_constraintTop_toBottomOf="@id/map"
        map:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitude"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        map:layout_constraintTop_toBottomOf="@id/et_latitude"
        map:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_places"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@id/et_longitude"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="12dp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>
